Fix spacing for handling long repo names

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -135,7 +135,7 @@ p.post-desc {
 }
 
 .project-title {
-  margin-bottom: $spacer1;
+  margin-bottom: $spacer;
 
   a {
     font-weight: bold;
@@ -160,7 +160,7 @@ p.post-desc {
   }
 
   .project-title {
-    margin-bottom: $spacer2;
+    margin-bottom: $spacer;
   }
 }
 
